--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
-  "name": "hackjame",
+  "name": "hackjam",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "axios": "^0.18.0",
+    "luxon": "^1.3.0",
+    "prop-types": "^15.6.2",
+    "ramda": "^0.25.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-spinners": "^0.3.2",
+    "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
+    "styled-components": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
