--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
     "axios": "^0.18.0",
     "luxon": "^1.3.0",
     "prop-types": "^15.6.2",
     "ramda": "^0.25.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
     "react-spinners": "^0.3.2",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
+    "source-map-explorer": "^1.6.0",
     "styled-components": "^3.3.3"
   },
   "scripts": {
+    "analyze": "source-map-explorer build/static/js/main.*",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
